[gd_scene load_steps=7 format=3 uid="uid://4ac58mgba4so"]

[ext_resource type="Script" path="res://scenes/history_card.gd" id="1_mje2j"]
[ext_resource type="Texture2D" uid="uid://ccikkqaem6px2" path="res://PF/Rectangle 536.png" id="1_n0030"]
[ext_resource type="Texture2D" uid="uid://biif1115kqp17" path="res://PF/Vector.png" id="2_yl751"]
[ext_resource type="Texture2D" uid="uid://dns4dul2ujyrj" path="res://PF/Line 3.png" id="3_vhvv7"]
[ext_resource type="Texture2D" uid="uid://grn3axy8qd8y" path="res://PF/1 (4).png" id="4_wqle4"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_s5gpa"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[node name="HistoryCard" type="MarginContainer"]
offset_right = 1053.0
offset_bottom = 493.0
size_flags_horizontal = 4
script = ExtResource("1_mje2j")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 2
texture = ExtResource("1_n0030")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 28

[node name="HBoxContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0

[node name="IdLbl" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
modulate = Color(0.593134, 0.593134, 0.593133, 1)
layout_mode = 2
size_flags_horizontal = 0
theme_override_font_sizes/font_size = 36
text = "ID: 762518506"

[node name="NumberLbl" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
modulate = Color(0, 0, 0, 1)
layout_mode = 2
size_flags_horizontal = 0
theme_override_font_sizes/font_size = 46
text = "951***289"

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
theme_override_constants/separation = 22

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/HBoxContainer/HBoxContainer"]
layout_mode = 2
texture = ExtResource("2_yl751")
stretch_mode = 3

[node name="DateLbl" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 36
text = "16.08.2024"

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer"]
modulate = Color(0.184314, 0.184314, 0.184314, 1)
layout_mode = 2
texture = ExtResource("3_vhvv7")
expand_mode = 5
stretch_mode = 4

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 71

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
theme_override_constants/separation = 25

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer2/HBoxContainer"]
modulate = Color(0.593134, 0.593134, 0.593133, 1)
layout_mode = 2
size_flags_horizontal = 0
theme_override_font_sizes/font_size = 36
text = "Игра"

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer2/HBoxContainer"]
layout_mode = 2

[node name="RangeMinLbl" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer2/HBoxContainer/HBoxContainer"]
modulate = Color(0, 0, 0, 1)
layout_mode = 2
size_flags_horizontal = 0
theme_override_font_sizes/font_size = 46
text = "30
"

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/HBoxContainer2/HBoxContainer/HBoxContainer"]
layout_mode = 2
texture = ExtResource("4_wqle4")
stretch_mode = 3

[node name="RangeMaxLbl" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer2/HBoxContainer/HBoxContainer"]
modulate = Color(0, 0, 0, 1)
layout_mode = 2
size_flags_horizontal = 0
theme_override_font_sizes/font_size = 46
text = "90
"

[node name="HBoxContainer3" type="HBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
theme_override_constants/separation = 25

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer2/HBoxContainer3"]
modulate = Color(0.593134, 0.593134, 0.593133, 1)
layout_mode = 2
size_flags_horizontal = 0
theme_override_font_sizes/font_size = 36
text = "Коэфф."

[node name="CoeffLbl" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer2/HBoxContainer3"]
modulate = Color(0, 0, 0, 1)
layout_mode = 2
size_flags_horizontal = 0
theme_override_font_sizes/font_size = 46
text = "2.99"

[node name="HBoxContainer4" type="HBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
theme_override_constants/separation = 25

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer2/HBoxContainer4"]
modulate = Color(0.593134, 0.593134, 0.593133, 1)
layout_mode = 2
size_flags_horizontal = 0
theme_override_font_sizes/font_size = 36
text = "Выбросил"

[node name="VybrosilLbl" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer2/HBoxContainer4"]
modulate = Color(0, 0, 0, 1)
layout_mode = 2
size_flags_horizontal = 0
theme_override_font_sizes/font_size = 46
text = "21.54"

[node name="TextureRect2" type="TextureRect" parent="MarginContainer/VBoxContainer"]
modulate = Color(0.184314, 0.184314, 0.184314, 1)
layout_mode = 2
texture = ExtResource("3_vhvv7")
expand_mode = 5
stretch_mode = 4

[node name="HBoxContainer3" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 43

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/VBoxContainer/HBoxContainer3"]
modulate = Color(0.972549, 0.972549, 0.980392, 1)
custom_minimum_size = Vector2(475, 135)
layout_mode = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_s5gpa")

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer3/PanelContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = -4

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer3/PanelContainer/VBoxContainer"]
modulate = Color(0.593134, 0.593134, 0.593133, 1)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 36
text = "Ставка"
horizontal_alignment = 1

[node name="BetLbl" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer3/PanelContainer/VBoxContainer"]
modulate = Color(0, 0, 0, 1)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 46
text = "142"
horizontal_alignment = 1

[node name="PanelColored" type="PanelContainer" parent="MarginContainer/VBoxContainer/HBoxContainer3"]
modulate = Color(0.968627, 0.890196, 0.894118, 1)
custom_minimum_size = Vector2(475, 135)
layout_mode = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_s5gpa")

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer3/PanelColored"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = -4

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer3/PanelColored/VBoxContainer"]
modulate = Color(0.593134, 0.593134, 0.593133, 1)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 36
text = "Результат"
horizontal_alignment = 1

[node name="ResultLbl" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer3/PanelColored/VBoxContainer"]
modulate = Color(0, 0, 0, 1)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
theme_override_font_sizes/font_size = 46
text = "+100 000"
horizontal_alignment = 1
